versions/0.8.0/_sources/refs/_aws-cdk_aws-guardduty.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"U0IShuK9Ofl5LUW4CHDBMlPd9nAqzMqmcX8Bj8yARjk="}

@aws-cdk/aws-guardduty
======================

.. mdinclude:: ./__aws-cdk_aws-guardduty.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-guardduty


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-guardduty.cloudformation

DetectorResource
~~~~~~~~~~~~~~~~

.. py:class:: DetectorResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DetectorResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DetectorResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.DetectorResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


DetectorResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DetectorResourceProps



   .. py:attribute:: enable

      ``AWS::GuardDuty::Detector.Enable``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-detector.html#cfn-guardduty-detector-enable


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


FilterResource
~~~~~~~~~~~~~~

.. py:class:: FilterResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``FilterResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``FilterResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.FilterResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ConditionProperty



      .. py:attribute:: eq

         ``FilterResource.ConditionProperty.Eq``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-condition.html#cfn-guardduty-filter-condition-eq


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: gte

         ``FilterResource.ConditionProperty.Gte``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-condition.html#cfn-guardduty-filter-condition-gte


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: lt

         ``FilterResource.ConditionProperty.Lt``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-condition.html#cfn-guardduty-filter-condition-lt


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: lte

         ``FilterResource.ConditionProperty.Lte``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-condition.html#cfn-guardduty-filter-condition-lte


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: neq

         ``FilterResource.ConditionProperty.Neq``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-condition.html#cfn-guardduty-filter-condition-neq


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: FindingCriteriaProperty



      .. py:attribute:: criterion

         ``FilterResource.FindingCriteriaProperty.Criterion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-findingcriteria.html#cfn-guardduty-filter-findingcriteria-criterion


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: itemType

         ``FilterResource.FindingCriteriaProperty.ItemType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-findingcriteria.html#cfn-guardduty-filter-findingcriteria-itemtype


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-guardduty.cloudformation.FilterResource.ConditionProperty` or undefined



FilterResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: FilterResourceProps



   .. py:attribute:: action

      ``AWS::GuardDuty::Filter.Action``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-action


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::GuardDuty::Filter.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-description


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: detectorId

      ``AWS::GuardDuty::Filter.DetectorId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-detectorid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: findingCriteria

      ``AWS::GuardDuty::Filter.FindingCriteria``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-findingcriteria


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-guardduty.cloudformation.FilterResource.FindingCriteriaProperty`


   .. py:attribute:: rank

      ``AWS::GuardDuty::Filter.Rank``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-rank


      :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: filterName

      ``AWS::GuardDuty::Filter.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


IPSetResource
~~~~~~~~~~~~~

.. py:class:: IPSetResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``IPSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``IPSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.IPSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


IPSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: IPSetResourceProps



   .. py:attribute:: activate

      ``AWS::GuardDuty::IPSet.Activate``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-ipset.html#cfn-guardduty-ipset-activate


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: detectorId

      ``AWS::GuardDuty::IPSet.DetectorId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-ipset.html#cfn-guardduty-ipset-detectorid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: format

      ``AWS::GuardDuty::IPSet.Format``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-ipset.html#cfn-guardduty-ipset-format


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: location

      ``AWS::GuardDuty::IPSet.Location``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-ipset.html#cfn-guardduty-ipset-location


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ipSetName

      ``AWS::GuardDuty::IPSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-ipset.html#cfn-guardduty-ipset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


MasterResource
~~~~~~~~~~~~~~

.. py:class:: MasterResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``MasterResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``MasterResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.MasterResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


MasterResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: MasterResourceProps



   .. py:attribute:: detectorId

      ``AWS::GuardDuty::Master.DetectorId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-master.html#cfn-guardduty-master-detectorid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: masterId

      ``AWS::GuardDuty::Master.MasterId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-master.html#cfn-guardduty-master-masterid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: invitationId

      ``AWS::GuardDuty::Master.InvitationId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-master.html#cfn-guardduty-master-invitationid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


MemberResource
~~~~~~~~~~~~~~

.. py:class:: MemberResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``MemberResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``MemberResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.MemberResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


MemberResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: MemberResourceProps



   .. py:attribute:: detectorId

      ``AWS::GuardDuty::Member.DetectorId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-detectorid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: email

      ``AWS::GuardDuty::Member.Email``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-email


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: memberId

      ``AWS::GuardDuty::Member.MemberId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-memberid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: disableEmailNotification

      ``AWS::GuardDuty::Member.DisableEmailNotification``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-disableemailnotification


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: message

      ``AWS::GuardDuty::Member.Message``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-message


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: status

      ``AWS::GuardDuty::Member.Status``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-status


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


ThreatIntelSetResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ThreatIntelSetResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ThreatIntelSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ThreatIntelSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.ThreatIntelSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ThreatIntelSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ThreatIntelSetResourceProps



   .. py:attribute:: activate

      ``AWS::GuardDuty::ThreatIntelSet.Activate``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-threatintelset.html#cfn-guardduty-threatintelset-activate


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: detectorId

      ``AWS::GuardDuty::ThreatIntelSet.DetectorId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-threatintelset.html#cfn-guardduty-threatintelset-detectorid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: format

      ``AWS::GuardDuty::ThreatIntelSet.Format``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-threatintelset.html#cfn-guardduty-threatintelset-format


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: location

      ``AWS::GuardDuty::ThreatIntelSet.Location``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-threatintelset.html#cfn-guardduty-threatintelset-location


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: threatIntelSetName

      ``AWS::GuardDuty::ThreatIntelSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-threatintelset.html#cfn-guardduty-threatintelset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-guardduty

