versions/0.8.1/_sources/refs/_aws-cdk_aws-guardduty.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"CySjxl2mRe7zgB0GWrvJDW4slFKAzx+1XitJVKKpI2M="}

@aws-cdk/aws-guardduty
======================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/guardduty/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:guardduty:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="guardduty" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>guardduty</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:guardduty:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='guardduty', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-guardduty/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-guardduty@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-guardduty": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-guardduty@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-guardduty/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-guardduty@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-guardduty": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-guardduty@0.8.1



.. mdinclude:: ./__aws-cdk_aws-guardduty.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-guardduty


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-guardduty.cloudformation

DetectorResource
~~~~~~~~~~~~~~~~

.. py:class:: DetectorResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.DetectorResource;

      .. code-tab:: javascript

         const { cloudformation.DetectorResource } = require('@aws-cdk/aws-guardduty');

      .. code-tab:: typescript

         import { cloudformation.DetectorResource } from '@aws-cdk/aws-guardduty';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DetectorResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DetectorResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.DetectorResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


DetectorResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DetectorResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.DetectorResourceProps;

      .. code-tab:: javascript

         // cloudformation.DetectorResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.DetectorResourceProps } from '@aws-cdk/aws-guardduty';





   .. py:attribute:: enable

      ``AWS::GuardDuty::Detector.Enable``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-detector.html#cfn-guardduty-detector-enable


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


FilterResource
~~~~~~~~~~~~~~

.. py:class:: FilterResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.FilterResource;

      .. code-tab:: javascript

         const { cloudformation.FilterResource } = require('@aws-cdk/aws-guardduty');

      .. code-tab:: typescript

         import { cloudformation.FilterResource } from '@aws-cdk/aws-guardduty';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``FilterResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``FilterResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.FilterResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ConditionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.guardduty.cloudformation.FilterResource.ConditionProperty;

         .. code-tab:: javascript

            // cloudformation.FilterResource.ConditionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FilterResource.ConditionProperty } from '@aws-cdk/aws-guardduty';





      .. py:attribute:: eq

         ``FilterResource.ConditionProperty.Eq``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-condition.html#cfn-guardduty-filter-condition-eq


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: gte

         ``FilterResource.ConditionProperty.Gte``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-condition.html#cfn-guardduty-filter-condition-gte


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: lt

         ``FilterResource.ConditionProperty.Lt``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-condition.html#cfn-guardduty-filter-condition-lt


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: lte

         ``FilterResource.ConditionProperty.Lte``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-condition.html#cfn-guardduty-filter-condition-lte


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: neq

         ``FilterResource.ConditionProperty.Neq``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-condition.html#cfn-guardduty-filter-condition-neq


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: FindingCriteriaProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.guardduty.cloudformation.FilterResource.FindingCriteriaProperty;

         .. code-tab:: javascript

            // cloudformation.FilterResource.FindingCriteriaProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FilterResource.FindingCriteriaProperty } from '@aws-cdk/aws-guardduty';





      .. py:attribute:: criterion

         ``FilterResource.FindingCriteriaProperty.Criterion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-findingcriteria.html#cfn-guardduty-filter-findingcriteria-criterion


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: itemType

         ``FilterResource.FindingCriteriaProperty.ItemType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-guardduty-filter-findingcriteria.html#cfn-guardduty-filter-findingcriteria-itemtype


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-guardduty.cloudformation.FilterResource.ConditionProperty` or undefined



FilterResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: FilterResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.FilterResourceProps;

      .. code-tab:: javascript

         // cloudformation.FilterResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.FilterResourceProps } from '@aws-cdk/aws-guardduty';





   .. py:attribute:: action

      ``AWS::GuardDuty::Filter.Action``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-action


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::GuardDuty::Filter.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-description


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: detectorId

      ``AWS::GuardDuty::Filter.DetectorId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-detectorid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: findingCriteria

      ``AWS::GuardDuty::Filter.FindingCriteria``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-findingcriteria


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-guardduty.cloudformation.FilterResource.FindingCriteriaProperty`


   .. py:attribute:: rank

      ``AWS::GuardDuty::Filter.Rank``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-rank


      :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: filterName

      ``AWS::GuardDuty::Filter.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-filter.html#cfn-guardduty-filter-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


IPSetResource
~~~~~~~~~~~~~

.. py:class:: IPSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.IPSetResource;

      .. code-tab:: javascript

         const { cloudformation.IPSetResource } = require('@aws-cdk/aws-guardduty');

      .. code-tab:: typescript

         import { cloudformation.IPSetResource } from '@aws-cdk/aws-guardduty';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``IPSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``IPSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.IPSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


IPSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: IPSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.IPSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.IPSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.IPSetResourceProps } from '@aws-cdk/aws-guardduty';





   .. py:attribute:: activate

      ``AWS::GuardDuty::IPSet.Activate``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-ipset.html#cfn-guardduty-ipset-activate


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: detectorId

      ``AWS::GuardDuty::IPSet.DetectorId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-ipset.html#cfn-guardduty-ipset-detectorid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: format

      ``AWS::GuardDuty::IPSet.Format``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-ipset.html#cfn-guardduty-ipset-format


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: location

      ``AWS::GuardDuty::IPSet.Location``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-ipset.html#cfn-guardduty-ipset-location


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ipSetName

      ``AWS::GuardDuty::IPSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-ipset.html#cfn-guardduty-ipset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


MasterResource
~~~~~~~~~~~~~~

.. py:class:: MasterResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.MasterResource;

      .. code-tab:: javascript

         const { cloudformation.MasterResource } = require('@aws-cdk/aws-guardduty');

      .. code-tab:: typescript

         import { cloudformation.MasterResource } from '@aws-cdk/aws-guardduty';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``MasterResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``MasterResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.MasterResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


MasterResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: MasterResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.MasterResourceProps;

      .. code-tab:: javascript

         // cloudformation.MasterResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.MasterResourceProps } from '@aws-cdk/aws-guardduty';





   .. py:attribute:: detectorId

      ``AWS::GuardDuty::Master.DetectorId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-master.html#cfn-guardduty-master-detectorid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: masterId

      ``AWS::GuardDuty::Master.MasterId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-master.html#cfn-guardduty-master-masterid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: invitationId

      ``AWS::GuardDuty::Master.InvitationId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-master.html#cfn-guardduty-master-invitationid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


MemberResource
~~~~~~~~~~~~~~

.. py:class:: MemberResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.MemberResource;

      .. code-tab:: javascript

         const { cloudformation.MemberResource } = require('@aws-cdk/aws-guardduty');

      .. code-tab:: typescript

         import { cloudformation.MemberResource } from '@aws-cdk/aws-guardduty';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``MemberResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``MemberResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.MemberResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


MemberResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: MemberResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.MemberResourceProps;

      .. code-tab:: javascript

         // cloudformation.MemberResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.MemberResourceProps } from '@aws-cdk/aws-guardduty';





   .. py:attribute:: detectorId

      ``AWS::GuardDuty::Member.DetectorId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-detectorid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: email

      ``AWS::GuardDuty::Member.Email``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-email


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: memberId

      ``AWS::GuardDuty::Member.MemberId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-memberid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: disableEmailNotification

      ``AWS::GuardDuty::Member.DisableEmailNotification``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-disableemailnotification


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: message

      ``AWS::GuardDuty::Member.Message``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-message


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: status

      ``AWS::GuardDuty::Member.Status``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-member.html#cfn-guardduty-member-status


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


ThreatIntelSetResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ThreatIntelSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.ThreatIntelSetResource;

      .. code-tab:: javascript

         const { cloudformation.ThreatIntelSetResource } = require('@aws-cdk/aws-guardduty');

      .. code-tab:: typescript

         import { cloudformation.ThreatIntelSetResource } from '@aws-cdk/aws-guardduty';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ThreatIntelSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ThreatIntelSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-guardduty.cloudformation.ThreatIntelSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ThreatIntelSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ThreatIntelSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.guardduty.cloudformation.ThreatIntelSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.ThreatIntelSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ThreatIntelSetResourceProps } from '@aws-cdk/aws-guardduty';





   .. py:attribute:: activate

      ``AWS::GuardDuty::ThreatIntelSet.Activate``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-threatintelset.html#cfn-guardduty-threatintelset-activate


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: detectorId

      ``AWS::GuardDuty::ThreatIntelSet.DetectorId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-threatintelset.html#cfn-guardduty-threatintelset-detectorid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: format

      ``AWS::GuardDuty::ThreatIntelSet.Format``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-threatintelset.html#cfn-guardduty-threatintelset-format


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: location

      ``AWS::GuardDuty::ThreatIntelSet.Location``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-threatintelset.html#cfn-guardduty-threatintelset-location


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: threatIntelSetName

      ``AWS::GuardDuty::ThreatIntelSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-guardduty-threatintelset.html#cfn-guardduty-threatintelset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-guardduty

